# memorg

./: MEMORY_ABSTRACTION_SUMMARY.md  README.md  __init__.py  pyproject.toml  run_tests.py  setup.py
app/: cli.py  context_manager.py  context_store.py  main.py
app/mcp/: server.py
app/storage/: sqlite_storage.py
app/vector_store/: usearch_vector_store.py
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/architecture/: index.md  memory-abstraction.md  overview.md  technical-spec.md
documentation/docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
documentation/docs/guides/: cli-guide.md  index.md  library-usage.md  mcp-server.md  usage-patterns.md
documentation/docs/reference/: cli.md  index.md
examples/: memory_abstraction_demo.py  memory_usage.py
specifications/: technical.md
src/memorg/: cli.py  cli_entry.py  context_manager.py  context_store.py  main.py  retrieval.py  window_optimizer.py
src/memorg/mcp/: cli.py
src/memorg/memory/: manager.py  store.py
tests/: TEST_SUMMARY.md  conftest.py  test_context_manager.py  test_context_store.py  test_main.py  test_mcp.py  test_models.py  test_retrieval.py  test_sqlite_storage.py  test_storage_adapter.py  test_vector_store.py  test_window_optimizer.py
