[tool.poetry]
name = "memorg"
version = "0.2.0"
description = "A hierarchical context management system for Large Language Models that acts as an external memory layer, helping LLMs maintain context over extended interactions while managing token usage efficiently."
authors = ["Dipankar Sarkar <me@dipankar.name>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/skelf-research/memorg"
homepage = "https://github.com/skelf-research/memorg"
documentation = "https://skelf-research.github.io/memorg/"
keywords = ["llm", "context-management", "memory", "ai", "nlp", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "memorg", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.79.0"
rich = "^14.0.0"
tiktoken = "^0.9.0"
aiosqlite = "^0.21.0"
numpy = "^2.2.6"
usearch = "^2.17.7"
python-dotenv = "^1.1.0"
fastmcp = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"

[tool.poetry.scripts]
memorg = "memorg.cli_entry:main"
memorg-mcp = "memorg.mcp.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
